# etl-project

./: .gitignore  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml
app/: main.py
app/pipeline/: __init__.py  extract.py  load.py  transform.py
data/input/: fake_data_1.csv  fake_data_10.csv  fake_data_11.csv  fake_data_12.csv  fake_data_13.csv  fake_data_14.csv  fake_data_15.csv  fake_data_16.csv  fake_data_17.csv  fake_data_18.csv  fake_data_19.csv  fake_data_2.csv  fake_data_20.csv  fake_data_21.csv  fake_data_22.csv  fake_data_23.csv  fake_data_24.csv  fake_data_25.csv  fake_data_3.csv  fake_data_4.csv  fake_data_5.csv  fake_data_6.csv  fake_data_7.csv  fake_data_8.csv  fake_data_9.csv
data/output/: output.csv
tests/: test_pipeline.py
