[tool.poetry]
name = "etl-project"
version = "0.1.0"
description = "my etl project"
authors = ["davypedro <davypedro7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
