[tool.poetry]
name = "etl-project"
version = "0.1.0"
description = "my etl project"
authors = ["davypedro <davypedro7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.0"
openpyxl = "^3.1.2"
numpy = "^1.26.4"
pylance = "^0.9.15"
pytest = "^8.0.1"
isort = "^5.13.2"
blue = "^0.9.1"
pydocstyle = "^6.3.0"
pip-audit = "^2.7.1"
taskipy = "^1.12.2"
mkdocs = "^1.5.3"
pymdown-extensions = "^10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_party = []

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "poetry run pytest -v"
run = "python app/main.py"
kill = "kill -9 $(lsof -t -i:8000)"